# ticket_bot

./: .gitignore  Dockerfile  README.md  bot.py  pyproject.toml
.github/workflows/: deploy.yaml
