[tool.poetry]
name = "ticket-bot"
version = "0.1.0"
description = ""
authors = ["algis398507 <algis398507@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
aiogram = "^3.10.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
